--- a/package.json
+++ b/package.json
@@ -5,5 +5,17 @@
   "main": "index.js",
   "repository": "https://github.com/beliemun/typechain.git",
   "author": "beliemun <beliemun@paran.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "tsc-watch --onSuccess \" node build/index.js\" "
+  },
+  "devDependencies": {
+    "@types/node": "14.14.22",
+    "ts-node": "9.1.1",
+    "tsc-watch": "4.2.9",
+    "typescript": "4.1.3"
+  },
+  "dependencies": {
+    "crypto-js": "4.0.0"
+  }
 }
